--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -1,1 +1,117 @@
-rawr
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title>Travel Website Home</title>
+        <link rel="stylesheet" href="style.css">
+        <img src="images/logos/logo.png" alt="airplane" class="logo1" width="80" height="50">
+        <img src="images/photos/iceland.jpg" alt="iceland" align="right" class="logo2"  width="80" height="50">
+    </head>
+    <hr>
+
+    <body>
+    <h1> Iceland</h1>
+    <p> <dfn><b>Iceland</b></dfn> is a country of sharp contrasts. A place where fire and ice co-exist. Where dark winters are offset by the summer's midnight sun. A country where insular existence has spurred a rich and vibrant culture.<p>
+<br>
+
+    <div class="pinkbox">
+        <p style="color: white">Things to do in Iceland</p>
+
+    <div class="smallbox">
+    <img src="images/photos/iceland3.jpg" alt="northernlights" >
+    <figcaption>  Northern Lights in Iceland</figcaption>
+</div>
+
+ <div class="largebox">
+     <p>The Aurora Borealis takes its name from the Roman goddess
+of dawn, Aurora, and the Greek name for the north wind, Boreas. From September to April, Iceland is a hotspot for the magnificent lightship.
+The Aurora Borealis, more commonly referred to as the Northern lights is a natural phenomenon created when particles emitted by the su interact with the atmosphere in the Earth’s magnetic field. This relates energy, causing peculiar luminous green streaks across the skies.
+</p>
+
+</div>
+<div class="largebox">
+    <p>When making a trip to Iceland, it is hard not to pay special attention to the country’s namesake—namely, its 4,500 square miles of glacier. Ice climbing on the glaciers is practiced year round and takes place mainly on the Sólheimajökulll and Svínafellsjökullglaciers in the south of Iceland, to which day trips are offered from Reykjavik (and Skaftafell).
+    </p>
+</div>
+    <div class="smallbox">
+      <img src="images/photos/iceland1.jpg" alt="iceland image" >
+      <figcaption>Ice climbing & hiking on glaciers </figcaption>
+    </div>
+
+</div>
+
+<br>
+<h3>Upcoming Events</h3>
+    <ul>
+      <li> <a href="https://www.eistnaflug.is">Eistnaflug Rock Festival</a></li>
+      <li> <a href="https://www.laugavegshlaup.is/en">Laugavegur Ultra Marathon</a></li>
+  </ul>
+<hr>
+<h3> Newsfeed </h3>
+<d1 class="News">
+
+    <dt>Norse mylthology published as divination cards </dt>
+    <dd>Llewellyn Publications will be publishing 81-card divination deck brining the wisdom of Norse mythology to life.</dd>
+
+    <dt>Hollywood Reporter and Screen daily give Icelandic director Elfar Aoalasteinsson great reviews</dt>
+    <dd>nd of Sentence, by director Elfar Aoalsteins, receives very positive review in leading film industry magezines such as Hollywood. The film’s two leading actors, John Hawkes and Logan Herman, are also praised in both reviews. Hawkes has a quite a few films under his belt and was nominated for an Oscar for Winter’s Bones and young Lerman is best known for his role in The Perks of Being a Wallflower. Icelandic actor Ólafur Darri Ólafsson also has a small part in End of Sentence.</dd>
+  </d1>
+
+<hr>
+<table cellspacing="0" cellpadding="0" bgcolor="#98FB98">
+    <tr>
+        <th width="150"></th>
+        <th width="50" bgcolor="#98FB98">Price</th>
+</tr>
+<tr>
+    <td>Ticket from JFK</td>
+    <td style="background-color:#FFC0CB">$1100</td>
+</tr>
+<tr>
+    <td>Hotel for 2 per night</td>
+    <td> $150 </td>
+</tr>
+<tr>
+    <td> Food per person per day</td>
+    <td> $80 </td>
+</tr>
+<tr>
+    <td>Attractions and Activities per person</td>
+    <td> $200 </td>
+</tr>
+<tr>
+    <strong>
+    <td style="background-color:#98FB98;" > <b>  Total Cost per day per person </td>
+    <td style="background-color:#98FB98" > <b>  $430  </td>
+</tr>
+</table>
+
+
+<h3> Contact Us</h3>
+  <div class="phone-Block">
+      <img style="vertical-align: middle" src="images/logos/phone.png" alt="phonelogo" class="logo2" width="50" height="50">
+      <a href="tel:1(800)-999-9999"> 1(800)-999-9999 </a>
+</div>
+  <div class="email-Block">
+      <img style="vertical-align: middle" src="images/logos/email.png" alt="emaillogo" class="logo2" width="50" height="50">
+      Email to: <a href="mailto:abdullahtariq2026@gmail.com"> Abdullah Tariq</a>
+  </div>
+  <div class="IG-Block">
+      <img style="vertical-align: middle"  src="images/logos/instagram.png" alt="IGlogo" class="logo3" width="50" height="50">
+      <a href="Follow us at instagram"> Follow us at instagram </a>
+  </div>
+
+<footer>
+<nav style="text-align:center">
+    <a href="index.html" class="home">Home</a> |
+    <a href="northernlights.html" class="page1" >The Northern Lights</a> |
+    <a href="iceland.html" class="page2"> Hiking on Glaciers</a> |
+    <a href="contact.html" class="page3"> Contact </a> |
+</nav>
+<p style="text-align:center">
+     <b>2022 @ Project 1 by Abdullah Tariq</b>
+   </p>
+</footer>
+  </div>
+</html>
+
