--- a/Project 1/hiking.html
+++ b/Project 1/hiking.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Iceland</title>
-        <link rel="stylesheet" href="hiking.css">
+        <link rel="stylesheet" href="./hiking.css"/>
     </head>
     <body>
 
