--- a/Project 1/hiking.html
+++ b/Project 1/hiking.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Iceland</title>
-        <link rel="stylesheet" href="./hiking.css"/>
-    </head>
-    <body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title> Project 1 Hiking</title>
+    <link rel="stylesheet" href="./hiking.css" />
+  </head>
 
 <h1> Ice climbing & hiking on glaciers</h1>
 <hr>
