--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -105,7 +105,7 @@ The Aurora Borealis, more commonly referred to as the Northern lights is a natur
 <nav style="text-align:center">
     <a href="index.html" class="home">Home</a> |
     <a href="northernlights.html" class="page1" >The Northern Lights</a> |
-    <a href="iceland.html" class="page2"> Hiking on Glaciers</a> |
+    <a href="hiking.html" class="page2"> Hiking on Glaciers</a> |
     <a href="contact.html" class="page3"> Contact </a> |
 </nav>
 <p style="text-align:center">
