--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -54,7 +54,7 @@ The Aurora Borealis, more commonly referred to as the Northern lights is a natur
     <dd>Llewellyn Publications will be publishing 81-card divination deck brining the wisdom of Norse mythology to life.</dd>
 
     <dt>Hollywood Reporter and Screen daily give Icelandic director Elfar Aoalasteinsson great reviews</dt>
-    <dd>nd of Sentence, by director Elfar Aoalsteins, receives very positive review in leading film industry magezines such as Hollywood. The film’s two leading actors, John Hawkes and Logan Herman, are also praised in both reviews. Hawkes has a quite a few films under his belt and was nominated for an Oscar for Winter’s Bones and young Lerman is best known for his role in The Perks of Being a Wallflower. Icelandic actor Ólafur Darri Ólafsson also has a small part in End of Sentence.</dd>
+    <dd>by director Elfar Aoalsteins, receives very positive review in leading film industry magezines such as Hollywood. The film’s two leading actors, John Hawkes and Logan Herman, are also praised in both reviews. Hawkes has a quite a few films under his belt and was nominated for an Oscar for Winter’s Bones and young Lerman is best known for his role in The Perks of Being a Wallflower. Icelandic actor Ólafur Darri Ólafsson also has a small part in End of Sentence.</dd>
   </d1>
 
 <hr>
