--- a/Project3/index.html
+++ b/Project3/index.html
@@ -39,7 +39,7 @@
       </div>
     </div>
     
-    <script src="project3.js"></script>
+    <script src="script.js"></script>
     
   </body>
 </html>
