--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -4,7 +4,7 @@
 <head>
     <title> Weather App </title>
     <link rel="stylesheet" href="style.css">
-    <script src = "script.js" defer> </script>
+    <script src="script.js"></script>
 </head>
 
 <body>
