--- a/Project3/index.html
+++ b/Project3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="project3.css">
+  <link rel="stylesheet" href="style.css">
   <title>Guessing Game</title>
 </head>
   <body>
